actualizacion de archivos

--- a/data.in
+++ b/data.in
@@ -41,7 +41,7 @@ Tu corazón es puro y verdadero.
 Por encima de todo me encanta que seas mi madre.  
 Cuando quiero sentir amor, sólo me basta pensar en ti y mi corazón se llena.  
 Primero mi madre, y para siempre mi amiga.  
-te amo y agradezco todo lo que me has dado.  
+Te amo y agradezco todo lo que me has dado.  
 
 curiosidades  
 El tiempo es esa unidad de medida que a veces se siente eterna, pero contigo vuela.  
