division de archivos

--- a/data.in
+++ b/data.in
@@ -42,7 +42,7 @@ Te amo y agradezco todo lo que me has dado.
 curiosidades
 El tiempo es esa unidad de medida que a veces se siente eterna, pero contigo vuela.  
 Cuando estaba sola y me sentía triste y lejos de ti podía sentir tus abrazos a distancia y el roce de tus brazos alrededor de mí.  
-Hubo una vez que me viniste a buscar en el Juan XXIII con una blusa negra y rosas rojas, todavía siento la alegría de verte el aroma que sentía en ti, era una mezcla de tu perfume con tu amor.  
+Hubo una vez que me viniste a buscar en el Juan XXIII con una blusa negra y rosas rojas, todavía siento la alegría de verte... y el aroma que sentía en ti, era una mezcla de tu perfume con tu amor.  
 Si pudiera pedir un deseo sería poder abrazarte todos los días.  
 Puedes pedirme lo que quieras, pero no mi corazón, él ya te pertenece.  
 De ti aprendí a amar sin límites.  
